[metadata]
name = sphinx_plover
version = 0.1
description = Plover domain for Sphinx
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/sphinx-plover

[options]
include_package_data = True
python_requires = >=3.9
py_modules =
  sphinx_plover
