[metadata]
name = sphinx_plover
version = 0.2
description = Plover domain for Sphinx
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/sphinx-plover

[options]
zip_safe = True
include_package_data = True
setup_requires =
  setuptools>=30.3.0
python_requires = >=3.8
py_modules =
  sphinx_plover
